# osteoid

./: LICENSE  README.md  automated_test.py  pyproject.toml  setup.py
.github/workflows/: test-suite.yml
osteoid/: __init__.py  exceptions.py  fastosteoid.cpp  lib.py  skeleton.py  util.py  viewer.py
src/: fastosteoid.cpp
test_data/: thorny.swc.lz
