[project]
name = "osteoid"
version = "0.1.3"
description = "Skeleton object used for representing neurons, adjacent cells, and organelles."
authors = [
    {name = "William Silversmith",email = "william.silversmith@gmail.com"}
]
license = {text = "BSD-3 Clause"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastremap (>=1.14.0,<2.0.0)",
    "networkx (>=3.0.0,<4.0.0)",
    "numpy (>=2.0.0,<3.0.0)"
]

[tool.setuptools]
packages = ["osteoid"]